kubernetes/sit/deploy-sit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appname
  template:
    metadata:
      labels:
        app: appname
    spec:
      containers:
        - name: primary
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: api
          resources:
            limits:
              memory: "3000Mi"
              cpu: "800m"
            requests:
              memory: "500Mi"
              cpu: "500m"
