kubernetes/sit/service-sit.yaml
apiVersion: v1
kind: Service
metadata:
  name: appname
  labels:
    app: appname
spec:
  selector:
    app: appname
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: api
  type: ClusterIP
