kubernetes/sit/ingress-sit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appname
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: hostname  # Domain name ที่จะใช้เข้าถึง
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: servicename  # ชื่อ service ที่จะเชื่อมต่อ
                port:
                  number: 3000            # Port ที่ service เปิดให้เข้าถึง
